--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "@angular/platform-browser-dynamic": "~11.0.3",
     "@angular/router": "~11.0.3",
     "angular-confirmation-popover": "^6.0.0",
+    "apexcharts": "^3.27.1",
+    "ng-apexcharts": "^1.5.12",
     "ng2-order-pipe": "^0.1.5",
+    "ng2-pdf-viewer": "^7.0.1",
     "ng2-search-filter": "^0.5.1",
     "ngx-pagination": "^5.0.0",
     "rxjs": "~6.6.0",
